--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
-SECRET_KEY=<secret_key>
+SECRET_KEY=an_example_secret_key
+ALLOWED_HOSTS=.localhost, .herokuapp.com
 DEBUG=True
 DB_NAME=<db_name>
 DB_USER=<db_user>
