--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,8 @@
 Django~=4.0.3
+djangorestframework~=3.13.1
 gunicorn~=20.1
+model-bakery~=1.4.0
 psycopg2~=2.9.3
+pytest~=7.0.1
+pytest-django~=4.5.2
 python-decouple~=3.6
